尝试实现一些兼容

--- a/.env.example
+++ b/.env.example
@@ -16,5 +16,9 @@ DEEPSEEK_API_KEY=your_deepseek_api_key_here
 # 开发环境配置
 NODE_ENV=development
 
-# 日志级别 (debug, info, warn, error)
+# 日志级别配置 (debug, info, warn, error)
+# debug: 输出所有级别日志
+# info: 输出 info、warn 和 error 级别日志
+# warn: 只输出 warn 和 error 级别日志
+# error: 只输出 error 级别日志
 LOG_LEVEL=info
