重点只实现 GitHub Copilot 的 Ollama 接入模式，不关心其他兼容。 已验证支持tools和vision模式，当前已验证可使用Agent代理。

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Test Docker image
         run: |
-          docker run --rm -d --name test-container -p 3000:3000 universal-ollama-proxy
+          docker run --rm -d --name test-container -p 3000:11434 universal-ollama-proxy
           sleep 10
-          curl -f http://localhost:3000/health || exit 1
+          curl -f http://localhost:3000/ || exit 1
           docker stop test-container
