增加记录详细模型请求日志的记录功能

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ NODE_ENV=development
 # warn: 只输出 warn 和 error 级别日志
 # error: 只输出 error 级别日志
 LOG_LEVEL=info
+
+# 聊天详细日志配置
+# 启用聊天详细日志记录 (true/false)
+CHAT_LOGS=false
+# 聊天日志存储目录 (默认: logs/chat)
+CHAT_LOGS_DIR=logs/chat
