--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon --exec ts-node src/index.ts",
-    "dev:watch": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "dev": "nodemon",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "postbuild": "echo \"构建完成\"",
