完成调整 models 格式参照 GitHub 格式定义

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "validate:release": "node scripts/validate-release.js",
     "monitor:actions": "node scripts/monitor-actions.js",
     "prerelease": "npm run validate:release",
+    "test:models-chat": "node scripts/test-all-models.js",
     "prepare": "husky",
     "setup:hooks": "node scripts/setup-hooks.js",
     "postinstall": "npm run setup:hooks"
