--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "blob-polyfill": "^9.0.20240710",
+    "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "cross-fetch": "^4.1.0",
     "dotenv": "^16.5.0",
@@ -69,6 +70,7 @@
     "strip-json-comments": "^3.1.1"
   },
   "devDependencies": {
+    "@types/chokidar": "^2.1.7",
     "@types/cors": "^2.8.18",
     "@types/express": "^4.17.21",
     "@types/form-data": "^2.5.2",
