feat: 重构项目结构和工具链 - 迁移文档至docs目录并新增配置指南 - 统一脚本日志系统，支持中文时间戳 - 优化模型配置和提供商认证机制 - 完善构建和发布流程

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -229,22 +229,28 @@ jobs:
 
           ## ✨ 关于本项目
 
-          Universal Ollama Proxy 是一个通用的 AI 服务代理，提供 Ollama 兼容接口，专为 GitHub Copilot Chat 的 Ollama 接入优化。
+          Universal Ollama Proxy 是一个基于 OpenAI SDK 统一适配器架构的通用 AI 服务代理，提供完整的 Ollama 兼容接口，专为 GitHub Copilot Chat 的 Ollama 接入优化。支持多种主流 AI 服务提供商，让您可以在一个统一的接口下使用不同的AI模型。
 
-          ## 🔥 支持多种 AI 服务提供商
+          ## 🔥 支持的 AI 服务提供商
 
-          - **火山方舟引擎（豆包）** - 字节跳动的AI服务
-          - **阿里云百炼（通义千问）** - 阿里巴巴的AI服务
-          - **腾讯云 DeepSeek** - 腾讯云AI服务
-          - **DeepSeek 官方** - DeepSeek原生服务
+          项目当前支持 4 个主要的 AI 服务提供商：
 
-          ## 🏗️ 技术特性
+          - **🌋 火山方舟引擎** - 字节跳动旗下AI服务平台（豆包系列模型）
+          - **☁️ 阿里云百炼** - 阿里巴巴的企业级AI服务（通义千问系列模型）
+          - **🧠 DeepSeek官方** - DeepSeek原生API服务
+          - **🐧 腾讯云DeepSeek** - 腾讯云托管的DeepSeek服务
 
+          ## 🏗️ 核心技术特性
+
+          - **统一适配器架构** - 基于 OpenAI SDK 的统一接口设计
+          - **模型命名规范** - 采用 `provider:model` 格式的标准化命名
           - **跨平台支持** - Windows、Linux、macOS 全平台覆盖
-          - **多架构** - 支持 x64 和 ARM64 架构
-          - **零配置启动** - 开箱即用的配置文件
-          - **高性能** - 优化的请求处理和错误恢复机制
-          - **安全可靠** - 完善的错误处理和日志记录
+          - **多架构兼容** - 支持 x64 和 ARM64 架构
+          - **智能模型发现** - 自动发现和管理所有可用模型
+          - **零配置启动** - 开箱即用的配置文件和环境设置
+          - **高性能代理** - 优化的请求处理和错误恢复机制
+          - **完善的日志** - 详细的请求日志和错误追踪
+          - **API兼容性** - 核心 Ollama API 兼容接口
 
           ## 📥 下载安装
 
@@ -279,7 +285,7 @@ jobs:
           在 .env 文件中配置您的 API Keys：
 
           ```env
-          # 火山方舟引擎
+          # 火山方舟引擎（字节跳动）
           VOLCENGINE_API_KEY=your_volcengine_api_key
 
           # 阿里云百炼
@@ -289,14 +295,43 @@ jobs:
           DEEPSEEK_API_KEY=your_deepseek_api_key
 
           # 腾讯云 DeepSeek
-          DEEPSEEK_API_KEY=your_tencent_deepseek_api_key
+          TENCENTDS_API_KEY=your_tencentds_api_key
           ```
 
-          ## 🔗 GitHub Copilot Chat 使用
+          ## 🎯 模型使用示例
 
-          1. 启动 Universal Ollama Proxy（默认监听 [http://localhost:11434](http://localhost:11434)）
-          2. 在 GitHub Copilot Chat 中通过模型选择使用相应的 AI 服务提供商模型
-          3. 无需额外配置，直接开始对话
+          项目采用 `provider:model` 格式的标准化模型命名：
+
+          ```bash
+          # 火山方舟引擎模型
+          volcengine:ep-xxx-xxx
+
+          # 阿里云百炼模型
+          dashscope:qwen-turbo
+
+          # DeepSeek官方模型
+          deepseek:deepseek-chat
+
+          # 腾讯云DeepSeek模型
+          tencentds:deepseek-chat
+          ```
+
+          ## 🔗 GitHub Copilot Chat 集成
+
+          1. **启动服务** - 运行 Universal Ollama Proxy（默认监听 [http://localhost:11434](http://localhost:11434)）
+          2. **模型发现** - 系统自动发现所有配置的AI提供商的可用模型
+          3. **选择模型** - 在 GitHub Copilot Chat 中选择相应的 `provider:model` 格式模型
+          4. **开始对话** - 无需额外配置，直接享受多平台AI服务
+
+          ## 🚀 智能构建系统
+
+          本版本通过智能CI/CD系统构建：
+
+          - **双触发模式** - 支持 GitHub Release 和手动工作流触发
+          - **智能构建检查** - 自动检测是否需要重新构建
+          - **版本兼容性** - 智能处理版本格式和兼容性
+          - **增量构建** - 仅在必要时进行完整构建
+          - **多平台并行** - 高效的跨平台构建流水线
 
           ## 📚 相关链接
 
@@ -308,9 +343,14 @@ jobs:
 
           如果您在使用过程中遇到问题或有改进建议，欢迎：
 
-          - 📝 [提交 Issue](https://github.com/VicBilibily/universal-ollama-proxy/issues)
-          - 🌟 给项目点个 Star
+          - 📝 [提交 Issue](https://github.com/VicBilibily/universal-ollama-proxy/issues) - 报告问题或建议功能
+          - 🌟 [给项目点个 Star](https://github.com/VicBilibily/universal-ollama-proxy) - 支持项目发展
+          - 📖 查看 [完整文档](https://github.com/VicBilibily/universal-ollama-proxy/blob/main/README.md) - 详细使用指南
           - 🔄 分享给更多需要的朋友
+
+          ---
+
+          **感谢您选择 Universal Ollama Proxy！** 🎉
           EOF
             echo "use_default_body=true" >> $GITHUB_OUTPUT
           else
