feat: 添加工具过滤系统和配置热重载
- 实现完整的工具过滤功能，支持规则配置
- 添加配置热重载服务，提升开发体验
- 重构服务架构，优化模块组织
- 新增 OpenRouter 模型配置和过滤规则
- 完善文档，包括环境设置和使用指南
- 统一日志格式并支持中文本地化

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ TENCENTDS_API_KEY=your_tencent_deepseek_api_key_here
 # DeepSeek官方配置 - API Key 认证方式
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 
+# OpenRouter AI模型聚合服务配置 - API Key 认证方式
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+
 # 开发环境配置
 NODE_ENV=development
 
