--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -225,36 +225,18 @@ jobs:
           if [ "$SHOULD_SET_BODY" = "true" ]; then
             # 创建默认Release描述
             cat > release_body.md << 'EOF'
-          # 🚀 Universal Ollama Proxy ${{ steps.get_version.outputs.version }} 发布说明
+          # 🚀 Universal Ollama Proxy ${{ steps.get_version.outputs.version }} 发布
 
-          ## ✨ 关于本项目
+          **统一的 AI 服务代理** - 专为 GitHub Copilot Chat 的 Ollama 接入优化，提供完整的 OpenAI 兼容接口。
 
-          Universal Ollama Proxy 是一个基于 OpenAI SDK 统一适配器架构的通用 AI 服务代理，提供完整的 Ollama 兼容接口，专为 GitHub Copilot Chat 的 Ollama 接入优化。支持多种主流 AI 服务提供商，让您可以在一个统一的接口下使用不同的AI模型。
+          ## ✨ 主要特性
 
-          ## 🔥 支持的 AI 服务提供商
+          - 🔌 **多供应商支持** - 火山方舟引擎、阿里云百炼、DeepSeek、腾讯云、OpenRouter
+          - 🔄 **统一接口** - 标准 OpenAI 格式，`provider:model` 命名规范
+          - 🔧 **跨平台** - 支持 Windows/Linux/macOS, x64/ARM64 架构
+          - 🛠️ **工具集成** - 为 GitHub Copilot Chat 优化的接口
 
-          项目当前支持 4 个主要的 AI 服务提供商：
-
-          - **🌋 火山方舟引擎** - 字节跳动旗下AI服务平台（豆包系列模型）
-          - **☁️ 阿里云百炼** - 阿里巴巴的企业级AI服务（通义千问系列模型）
-          - **🧠 DeepSeek官方** - DeepSeek原生API服务
-          - **🐧 腾讯云DeepSeek** - 腾讯云托管的DeepSeek服务
-
-          ## 🏗️ 核心技术特性
-
-          - **统一适配器架构** - 基于 OpenAI SDK 的统一接口设计
-          - **模型命名规范** - 采用 `provider:model` 格式的标准化命名
-          - **跨平台支持** - Windows、Linux、macOS 全平台覆盖
-          - **多架构兼容** - 支持 x64 和 ARM64 架构
-          - **智能模型发现** - 自动发现和管理所有可用模型
-          - **零配置启动** - 开箱即用的配置文件和环境设置
-          - **高性能代理** - 优化的请求处理和错误恢复机制
-          - **完善的日志** - 详细的请求日志和错误追踪
-          - **API兼容性** - 核心 Ollama API 兼容接口
-
-          ## 📥 下载安装
-
-          请根据您的操作系统选择对应的安装包：
+          ## 📥 下载与安装
 
           | 操作系统 | 架构 | 下载文件 |
           |---------|-----|---------|
@@ -267,86 +249,16 @@ jobs:
 
           ## 🚀 快速开始
 
-          1. **下载** 适合您系统的安装包
-          2. **解压** 文件到任意目录
-          3. **配置** 复制 .env.example 为 .env，填入您的 API Keys
-          4. **运行** 执行对应平台的可执行文件
-
-          ```bash
-          # Windows
-          universal-ollama-proxy.exe
-
-          # Linux/macOS
-          ./universal-ollama-proxy
-          ```
-
-          ## ⚙️ 配置说明
-
-          在 .env 文件中配置您的 API Keys：
-
-          ```env
-          # 火山方舟引擎（字节跳动）
-          VOLCENGINE_API_KEY=your_volcengine_api_key
-
-          # 阿里云百炼
-          DASHSCOPE_API_KEY=your_dashscope_api_key
-
-          # DeepSeek 官方
-          DEEPSEEK_API_KEY=your_deepseek_api_key
-
-          # 腾讯云 DeepSeek
-          TENCENTDS_API_KEY=your_tencentds_api_key
-          ```
-
-          ## 🎯 模型使用示例
-
-          项目采用 `provider:model` 格式的标准化模型命名：
-
-          ```bash
-          # 火山方舟引擎模型
-          volcengine:ep-xxx-xxx
-
-          # 阿里云百炼模型
-          dashscope:qwen-turbo
-
-          # DeepSeek官方模型
-          deepseek:deepseek-chat
-
-          # 腾讯云DeepSeek模型
-          tencentds:deepseek-chat
-          ```
-
-          ## 🔗 GitHub Copilot Chat 集成
-
-          1. **启动服务** - 运行 Universal Ollama Proxy（默认监听 [http://localhost:11434](http://localhost:11434)）
-          2. **模型发现** - 系统自动发现所有配置的AI提供商的可用模型
-          3. **选择模型** - 在 GitHub Copilot Chat 中选择相应的 `provider:model` 格式模型
-          4. **开始对话** - 无需额外配置，直接享受多平台AI服务
-
-          ## 🚀 智能构建系统
-
-          本版本通过智能CI/CD系统构建：
-
-          - **双触发模式** - 支持 GitHub Release 和手动工作流触发
-          - **智能构建检查** - 自动检测是否需要重新构建
-          - **版本兼容性** - 智能处理版本格式和兼容性
-          - **增量构建** - 仅在必要时进行完整构建
-          - **多平台并行** - 高效的跨平台构建流水线
+          1. 下载并解压
+          2. 复制 `.env.example` 为 `.env` 并添加您的 API Keys
+          3. 运行可执行文件，服务默认监听 http://localhost:11434
+          4. 在 GitHub Copilot Chat 中使用 `provider:model` 格式访问模型
 
           ## 📚 相关链接
 
-          - **项目主页**: https://github.com/VicBilibily/universal-ollama-proxy
-          - **问题反馈**: https://github.com/VicBilibily/universal-ollama-proxy/issues
-          - **使用文档**: 查看项目 [README.md](README.md)
-
-          ## 🤝 支持与反馈
-
-          如果您在使用过程中遇到问题或有改进建议，欢迎：
-
-          - 📝 [提交 Issue](https://github.com/VicBilibily/universal-ollama-proxy/issues) - 报告问题或建议功能
-          - 🌟 [给项目点个 Star](https://github.com/VicBilibily/universal-ollama-proxy) - 支持项目发展
-          - 📖 查看 [完整文档](https://github.com/VicBilibily/universal-ollama-proxy/blob/main/README.md) - 详细使用指南
-          - 🔄 分享给更多需要的朋友
+          - [详细文档](https://github.com/VicBilibily/universal-ollama-proxy/blob/main/README.md)
+          - [问题反馈](https://github.com/VicBilibily/universal-ollama-proxy/issues)
+          - [项目主页](https://github.com/VicBilibily/universal-ollama-proxy)
 
           ---
 
