--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "monitor:actions": "node scripts/monitor-actions.js",
     "prerelease": "npm run validate:release",
     "test-all-models-chat": "node scripts/test-all-models.js",
-    "prepare": "husky",
+    "prepare": "husky install",
     "setup:hooks": "node scripts/setup-hooks.js",
     "postinstall": "npm run setup:hooks"
   },
@@ -78,8 +78,8 @@
     "@types/node": "^22.15.29",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.3.0",
     "nodemon": "^3.1.10",
     "pkg": "^5.8.1",
     "prettier": "^3.5.3",
