--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,9 @@ MOONSHOT_API_KEY=your_moonshot_api_key_here
 # OpenRouter AI模型聚合服务配置 - API Key 认证方式
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
+# 魔搭社区配置 - API Key 认证方式
+MODELSCOPE_API_KEY=your_modelscope_api_key_here
+
 # 开发环境配置
 NODE_ENV=development
 
