--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,9 @@ OPENROUTER_API_KEY=your_openrouter_api_key_here
 # 魔搭社区配置 - API Key 认证方式
 MODELSCOPE_API_KEY=your_modelscope_api_key_here
 
+# 智谱AI BigModel配置 - API Key 认证方式
+BIGMODEL_API_KEY=your_bigmodel_api_key_here
+
 # 开发环境配置
 NODE_ENV=development
 
