--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,6 +22,7 @@ services:
       - MOONSHOT_API_KEY=${MOONSHOT_API_KEY}
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - MODELSCOPE_API_KEY=${MODELSCOPE_API_KEY}
+      - BIGMODEL_API_KEY=${BIGMODEL_API_KEY}
     volumes:
       # 如果需要挂载日志目录，可以取消注释
       # - ./logs:/app/logs
